--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,8 @@
     "display": "standalone",
     "icons": [
         {
-            "src": "images/logo192.png",
+            "src": "images/WGFavicon.png",
             "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "images/logo512.png",
-            "sizes": "512x512",
             "type": "image/png"
         }
     ]
